--- a/Web/Staff.html
+++ b/Web/Staff.html
@@ -124,7 +124,7 @@
         YYYY-MM-DD<br>HH:MM:SS
     </div>
     <div class="footer">
-        <!-- footer added -->
+        <!-- footer -->
     </div>
 </body>
 </html>
