--- a/Web/Admin-Distribute Items.html
+++ b/Web/Admin-Distribute Items.html
@@ -7,26 +7,16 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
         }
-        .header {
-            background-color: #4db6ac;
+        header {
+            background-color: #4a90e2;
             color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .sub-header {
-            background-color: #f8bbd0;
             padding: 10px;
-            display: flex;
-            align-items: center;
-        }
-        .sub-header a {
-            text-decoration: none;
-            color: black;
-            margin-right: 10px;
+            text-align: center;
+            font-size: 24px;
         }
         .container {
             display: flex;
@@ -40,90 +30,127 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 45%;
         }
-        .left-side h2 {
-            margin-top: 0;
-        }
-        .left-side input[type="text"], .left-side select {
-            width: 100%;
+        .search-bar {
+            display: flex;
+            align-items: center;
+            background-color: #e0e0e0;
             padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
             border-radius: 5px;
+            margin-bottom: 20px;
         }
-        .left-side input[type="radio"] {
-            margin-right: 5px;
-        }
-        .left-side label {
-            margin-right: 20px;
-        }
-        .left-side button {
-            background-color: #4db6ac;
-            color: white;
-            padding: 10px 20px;
+        .search-bar input {
             border: none;
+            background: none;
+            flex-grow: 1;
+            padding: 5px;
+            font-size: 16px;
+        }
+        .search-bar button {
+            background-color: #4a90e2;
+            color: white;
+            border: none;
+            padding: 10px;
             border-radius: 5px;
             cursor: pointer;
         }
-        .right-side h3 {
+        .items-list, .distribution-list {
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        .items-list h3, .distribution-list h3 {
             margin-top: 0;
         }
-        .right-side .item {
-            background-color: #e1bee7;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
+        .item {
             display: flex;
             justify-content: space-between;
+            padding: 10px;
+            border-bottom: 1px solid #ccc;
+        }
+        .item:last-child {
+            border-bottom: none;
+        }
+        .amount-location {
+            display: flex;
             align-items: center;
+            margin-bottom: 20px;
         }
-        .right-side .item span {
-            background-color: #d1c4e9;
-            padding: 5px 10px;
-            border-radius: 50%;
+        .amount-location input, .amount-location select {
+            margin-right: 10px;
+            padding: 5px;
+            font-size: 16px;
         }
-        .right-side input[type="checkbox"] {
+        .confirm-distribute {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .confirm-distribute input {
             margin-right: 10px;
         }
-        .right-side button {
-            background-color: #4db6ac;
+        .distribute-button {
+            background-color: #4a90e2;
             color: white;
-            padding: 10px 20px;
             border: none;
+            padding: 10px;
             border-radius: 5px;
             cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1>MV88 Ventures Inventory System</h1>
-    </div>
-    <div class="sub-header">
-        <a href="#">&#8592; back</a>
-    </div>
+    <header>
+        MV88 Ventures Inventory System
+    </header>
     <div class="container">
         <div class="left-side">
-            <h2>Include Items</h2>
-            <input type="text" placeholder="Item Code">
-            <input type="text" placeholder="Item Name">
-            <div>
-                <input type="radio" id="dog" name="animal" value="dog">
-                <label for="dog">Dog</label>
-                <input type="radio" id="cat" name="animal" value="cat">
-                <label for="cat">Cat</label>
-                <input type="radio" id="dog-cat" name="animal" value="dog-cat">
-                <label for="dog-cat">Dog & Cat</label>
+            <div class="search-bar">
+                <input type="text" placeholder="Search Item Name/Code">
+                <button>Search</button>
             </div>
-            <select>
-                <option value="category1">Category 1</option>
-                <!-- Add more categories as needed -->
-            </select>
-            <input type="text" placeholder="0-99999">
-            <button>Add to List</button>
+            <div class="items-list">
+                <h3>Items Code</h3>
+                <div class="item">
+                    <span>Supporting line text lorem ipsum dolor sit</span>
+                </div>
+                <div class="item">
+                    <span>Supporting line text lorem ipsum dolor sit</span>
+                </div>
+                <div class="item">
+                    <span>Supporting line text lorem ipsum dolor sit</span>
+                </div>
+            </div>
+            <div class="amount-location">
+                <input type="number" placeholder="0-99999">
+                <select>
+                    <option>Location 1</option>
+                    <!-- Add more locations as needed -->
+                </select>
+                <button>Add to List</button>
+            </div>
         </div>
         <div class="right-side">
-            <h3>Items to Include</h3>
-            <!-- This is where the list of items will be displayed -->
+            <div class="distribution-list">
+                <h3>List of Items to Distribute</h3>
+                <div class="item">
+                    <span>List item</span>
+                    <span>100+</span>
+                </div>
+                <div class="item">
+                    <span>List item</span>
+                    <span>100+</span>
+                </div>
+                <div class="item">
+                    <span>List item</span>
+                    <span>100+</span>
+                </div>
+            </div>
+            <div class="confirm-distribute">
+                <input type="checkbox" id="confirm-items-out">
+                <label for="confirm-items-out">Confirm Items Out</label>
+            </div>
+            <button class="distribute-button">Distribute</button>
         </div>
     </div>
 </body>
