for checking Ahome & Bhome

--- a/Web/Bhome.html
+++ b/Web/Bhome.html
@@ -230,26 +230,22 @@
         <div class="welcome-admin">
             <span>Welcome</span>
             <div class="admin-circle"></div>
-            <span>ADMIN</span>
+            <span>Tagaytay Staff</span>
         </div>
         <h2 class="access-title">What would you like to access?</h2>
         <div class="access-cards">
-            <!-- Add Items Card -->
-            <section class="card" aria-labelledby="add-items-title">
-                <h3 id="add-items-title">Add Items</h3>
+            <!-- Receive Items Card -->
+            <section class="card" aria-labelledby="receive-items-title">
+                <h3 id="receive-items-title">Receive Items</h3>
                 <ul>
-                    <li><a href="#" onclick="// Backend: Add item quantity">Add Items Quantity</a></li>
-                    <!-- Backend: Implement add item quantity functionality here -->
-                    <li><a href="#" onclick="// Backend: Include to inventory">Include to Inventory</a></li>
-                    <!-- Backend: Implement include to inventory functionality here -->
-                    <li><a href="#" onclick="// Backend: Edit item info">Edit Item Information</a></li>
-                    <!-- Backend: Implement edit item information functionality here -->
+                    <li><a href="#" onclick="// Backend: Recent shipments">Recent Shipments</a></li>
+                    <!-- Backend: Implement recent shipments functionality here -->
                 </ul>
             </section>
 
-            <!-- Deliver Items Card -->
-            <section class="card" aria-labelledby="deliver-items-title">
-                <h3 id="deliver-items-title">Deliver Items</h3>
+            <!-- Pullout Items Card -->
+            <section class="card" aria-labelledby="pullout-items-title">
+                <h3 id="pullout-items-title">Pullout Items</h3>
                 <ul>
                     <li><a href="#" onclick="// Backend: Search item name/code">Search Item Name/Code</a></li>
                     <!-- Backend: Implement search item functionality here -->
