lipat sa NetBeans

--- a/NetBeans_SE/web/Ahome.html
+++ b/NetBeans_SE/web/Ahome.html
@@ -213,8 +213,9 @@
             <h1>MV88 Ventures Inventory System</h1>
         </div>
         <div class="header-right">
-            <button class="logout-button" aria-label="Logout" onclick="// Backend: Logout">Logout</button>
-            <!-- Backend: Implement logout functionality here -->
+            <form action="LogoutServlet" method="post">
+                <input class="logout-button" type="submit" value="LOGOUT">
+            </form>
         </div>
     </header>
 
